# AQLM

./: QUIP_SHARP_INSTRUCTIONS.md  README.md  aq_engine.py  convert.ipynb  convert_legacy_model_format.py  convert_to_hf.py  create_dummy_model.py  finetune.py  finetune_fsdp.py  finetune_legacy.py  finetune_p.py  finetuning_args.py  finetuning_saveload.py  fix-pickle.py  fsdp.py  get_grid.ipynb  grid.py  lmeval.py  main.py  match.ipynb  modeling_llama.py  numba_inference_lut(1).ipynb  pyproject.toml  requirements.txt
benchmark/: benchmark_generate_cpu.py  generate_benchmark.py  matmul_benchmark.py  matmul_benchmark_cpu.py
benchmarks/: benchmark_generate_cpu.py  matmul_benchmark_cpu.py
cpp_kernel/: __init__.py  bindings.py  lib.cc  lib.h  lib.i  setup.py
cuda/: codebook_cuda.cpp  codebook_cuda_kernel.cu  setup_cuda.py  test.py
inference_lib/: MANIFEST.in  pyproject.toml  setup.cfg
inference_lib/src/aqlm/: __init__.py  codebook_cuda.cpp  inference.py  utils.py
inference_lib/src/aqlm/cuda/: __init__.py  codebook_cuda.cpp  cuda_kernel.cu  cuda_kernel.py  setup_cuda.py  test.py
inference_lib/src/aqlm/inference_kernels/: CmakeLists.txt  __init__.py  build.sh  cuda_kernel.cpp  cuda_kernel.cu  cuda_kernel.py  dequantization.py  kernel_selector.py  lut_kernel.cpp  lut_kernel.h  lut_kernel.py  lut_kernel_pytorch.cpp  match.ipynb  mps_kernel.h  mps_kernel.mm  mps_kernel.py  mps_kernlel.h  numba.py  numba_kernel.py  triton_kernel.py
lm-evaluation-harness/: README.md
models/: __init__.py
notebooks/: aq_entropy.ipynb  aq_simple.ipynb  aqlm_2bit_training.ipynb  aqlm_cuda_graph.ipynb  aqlm_entropy_l2.ipynb  aqlm_vllm.ipynb  colab_example.ipynb  entropy_tinyllama-1x12g4-PV-nosubspace-noSTE-ent_wandb-Copy1.ipynb  entropy_tinyllama-2x8-onlyV.ipynb  (+7 more)
(+47 files in other folders)
